--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     
                 </div>
                 <div class="col-lg-6">
-                    <img class="img-fluid" src="img/profile.jpg" alt="">
+                    <img class="img-fluid" src="img/WhatsApp Image 2025-01-08 at 20.18.05_11081fc7.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -128,7 +128,7 @@
                     </div>
                     <p class="mb-4">
 
-                        Full Stack Developer with 2 years at Codentrix Technology, skilled in app security, subscription systems, and AWS. Transitioning to Data Science with expertise in Python, machine learning, and analytics. Completed projects in predictive modeling and visualization, showcasing strong problem-solving and analytical skills.</p>
+                        Full Stack Developer with 2 years at Codentrix Technology pvt ltd, skilled in application security, subscription systems, and AWS integration. Transitioning to Data Science with expertise in Python, Machine learning, and analytics. Completed projects in predictive modeling and visualization, showcasing strong problem-solving and Analytical skills.</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Exceeding Expectations</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>High Quality Software</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>On Time Project Delivery</p>
