call me into reach me

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                     <p class="mb-2">My Address:</p>
                     <h3 class="fw-bold">No 90/144, Santhome High Road, Raja Annamalai Puram, Chennai- 600028 </h3>
                     <hr class="w-100">
-                    <p class="mb-2">Call me:</p>
+                    <p class="mb-2">Reach me:</p>
                     <h3 class="fw-bold">+91 9500089638</h3>
                     <hr class="w-100">
                     <p class="mb-2">Mail me:</p>
