--- a/index.html
+++ b/index.html
@@ -39,11 +39,15 @@
             <span class="sr-only">Loading...</span>
         </div>
     </div>
-    <div style="position: fixed; bottom: 20px; right: 20px;">
-        <button onclick="toggleChatbot()" style="padding: 10px 15px; background-color: #007BFF; color: white; border: none; border-radius: 50%; font-size: 16px; cursor: pointer;">Chat</button>
-    </div>
-    <!-- Chatbot Modal -->
-<div id="chatbot-modal" style="display: none; position: fixed; bottom: 80px; right: 20px; width: 300px; border: 1px solid #ccc; border-radius: 10px; background: white; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+    <!-- Chatbot Button -->
+<div style="position: fixed; top: 50%; right: 20px; transform: translateY(-50%);">
+    <button onclick="toggleChatbot()" style="padding: 10px 15px; background-color: #007BFF; color: white; border: none; border-radius: 50%; font-size: 20px; cursor: pointer;">
+        🤖
+    </button>
+</div>
+
+<!-- Chatbot Modal -->
+<div id="chatbot-modal" style="display: none; position: fixed; top: 50%; right: 80px; transform: translateY(-50%); width: 300px; border: 1px solid #ccc; border-radius: 10px; background: white; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
     <div style="padding: 10px; border-bottom: 1px solid #ccc; font-weight: bold;">Chatbot</div>
     <div id="chatbot-content" style="height: 300px; overflow-y: auto; padding: 10px;"></div>
     <div style="display: flex; border-top: 1px solid #ccc; padding: 5px;">
@@ -451,29 +455,30 @@
     <script src="lib/lightbox/js/lightbox.min.js"></script>
     <script>
          // chatbot
-    function toggleChatbot() {
-        const modal = document.getElementById('chatbot-modal');
-        modal.style.display = modal.style.display === 'none' ? 'block' : 'none';
-    }
+         function toggleChatbot() {
+    const modal = document.getElementById('chatbot-modal');
+    modal.style.display = modal.style.display === 'none' ? 'block' : 'none';
+}
 
-    async function sendChatMessage() {
-        const input = document.getElementById('chatbot-input');
-        const message = input.value;
-        input.value = '';
+async function sendChatMessage() {
+    const input = document.getElementById('chatbot-input');
+    const message = input.value;
+    input.value = '';
 
-        const content = document.getElementById('chatbot-content');
-        content.innerHTML += `<div><strong>You:</strong> ${message}</div>`;
+    const content = document.getElementById('chatbot-content');
+    content.innerHTML += `<div><strong>You:</strong> ${message}</div>`;
 
-        const response = await fetch('http://127.0.0.1:5000/chat', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ message })
-        });
-        const data = await response.json();
+    const response = await fetch('http://127.0.0.1:5000/chat', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ message })
+    });
+    const data = await response.json();
 
-        content.innerHTML += `<div><strong>Bot:</strong> ${data.response}</div>`;
-        content.scrollTop = content.scrollHeight;
-    }
+    content.innerHTML += `<div><strong>Bot:</strong> ${data.response}</div>`;
+    content.scrollTop = content.scrollHeight;
+}
+
     </script>
 
     <!-- Template Javascript -->
